Parametrized PrintableBingoCard